# slsDetectorPackage

./: CMakeLists.txt  RELEASE.txt
manual/manual-api/: Makefile
manual/manual-calwiz/: Makefile
manual/manual-client/: Makefile
manual/manual-gui/: Makefile
manual/manual-main/: Makefile
python/: CMakeLists.txt
python/scripts/: basic.py
python/sls_detector/: dacs.py  detector_property.py  experimental.py  jungfrau.py
python/src/: enums.cpp  experimental.cpp
settingsdir/mythen3/standard/8000eV/: trim.sn0000
slsDetectorGui/: CMakeLists.txt  gitInfo.txt
slsDetectorGui/forms/: form_tab_plot.ui
slsDetectorGui/include/: gitInfoGui.h
slsDetectorGui/slsDetectorPlotting/include/: SlsQt1DPlot.h  SlsQt2DHist.h  SlsQt2DPlot.h
slsDetectorGui/slsDetectorPlotting/src/: SlsQt1DZoomer.cxx  SlsQt2DPlot.cxx
slsDetectorGui/src/: qCloneWidget.cpp  qDetectorMain.cpp  qDrawPlot.cpp  qTabAdvanced.cpp  qTabDataOutput.cpp  qTabDebugging.cpp  qTabMeasurement.cpp  qTabMessages.cpp  qTabSettings.cpp
slsDetectorSoftware/: gitInfo.txt
slsReceiverSoftware/: gitInfo.txt
